slurm-7228944.out

02/07/19-16:39:10
node070.cm.cluster
(none)
I am: imstof
I am at /net/nfs001.ib.cluster/srv/home/imstof/testjobs

  File "./primeFinder.py", line 13
    <<<<<<< HEAD:olde/primeFinder.py
     ^
SyntaxError: invalid syntax

Script Complete
02/07/19-16:39:10
